--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,12 @@ input {
   display: inline;
 }
 
+.link {
+  font-size: 2rem;
+  color: var(--primary);
+  padding: 0px 20px;
+}
+
 .navbar {
   width: 100%;
   position: fixed;
