--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Blog</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <h1>TEST</h1>
+  <div class="wrapper">
+    <header class="hero">
+      <div>
+        <nav class"nav">
+          <a class="link" href="/">home</a>
+          {{#if logged_in}}
+          <a class="link" href="/dashboard">dashboard</a>
+          <button class="no-button" id="logout">logout</button>
+          {{else}}
+          <a class="link" href="/login">login</a>
+          {{/if}}
+        </nav>
+      </div>
+      <h1 class="app-title">Tech Blog</h1>
+    </header>
+{{#if logged_in}}
+    <main>
+      {{{ body }}}
+    </main>
+  </div>
+ 
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </body>
+
 </html>
