--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,24 +14,21 @@
       <div>
         <nav class"nav">
           <a class="link" href="/">home</a>
-          {{#if logged_in}}
           <a class="link" href="/dashboard">dashboard</a>
-          <button class="no-button" id="logout">logout</button>
-          {{else}}
+          <a class="link" href="/logout">logout</a>
           <a class="link" href="/login">login</a>
-          {{/if}}
+          
         </nav>
       </div>
       <h1 class="app-title">Tech Blog</h1>
     </header>
-{{#if logged_in}}
     <main>
       {{{ body }}}
     </main>
   </div>
  
   <script src="/js/logout.js"></script>
-  {{/if}}
+
 </body>
 
 </html>
