--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
-      <a class="signup-link" href="/user/">Sign up instead</a>
+      <a class="signup-link" href="/signup">Sign up instead</a>
     </form>
   </div>
 </div>
