Had an amazing tutor session and worked on a lot, signup, login, logout, dashboard, newpost

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -12,9 +12,9 @@
         <input class="form-input" type="password" id="password-input-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit" id="signup-form">signup</button>
       </div>
-      <a class="login-link" href="/user/login">Log in instead</a>
+      <a class="login-link" href="/login">Log in instead</a>
     </form>
   </div>
 </div>
