--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,9 @@
 <section>
   <h2>Your Posts</h2>
     {{#each posts as |post|}}
-      {{> dashboard-postinfo post}}
+
+      <h1>{{post.title}}</h1>
+      <p>{{post.body}}</p>
       {{!-- <a href="/dashboard/edit/{{post.id}}">Edit post</a> --}}
     {{/each}}
 
@@ -11,5 +13,3 @@
 {{/if}}
 
 <button type="submit" class="btn"><a class="link" href="/dashboard/new">+ New Post</a></button>
-
-<script src="/js/new.js"></script>
