--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
         <nav class"nav">
           <a class="link" href="/">home</a>
           <a class="link" href="/dashboard">dashboard</a>
-          <a class="link" href="/logout">logout</a>
+          <a class="link" href="/" id="logout-link">logout</a>
           <a class="link" href="/login">login</a>
           
         </nav>
