--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input class="form-input" type="password" id="password-input-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit"  id="login-form">login</button>
       </div>
       <a class="signup-link" href="/signup">Sign up instead</a>
     </form>
